--- a/styles/style.css
+++ b/styles/style.css
@@ -4,27 +4,76 @@
     box-sizing: border-box;
 }
 
+img{
+    max-width: 100%;
+    display: block;
+}
 
 
-.bzapp-container{
-    position: sticky;
-    padding: 48px;
-    overflow: hidden;
-    background-color: green;
+
+.bzapp__container{
+    
+    padding: 48px 160px;
+    background: linear-gradient(
+        to top,
+        #D7DBD6 85%,
+        #009688 85%,
+        #009688 100%
+      );
     height: 100vh;
     width: 100%;
 }
 
-.bzapp-chatlist{
-    
+/* aside stile ---------------------------------------------------------- */
+
+.bzapp__chatlist{
+    position: relative;
+    overflow: auto;
     height: 100%;
+    background-color: white;
+}
+
+.chatlist__head{
+    position: sticky;
+    top:0;
+    z-index: 1;
+    background-color: grey;
+}
+
+.chatlist__alert{
+    padding: 12px;
+    background-color: cyan;
+}
+
+.chatlist__searchbar{
+    padding: 12px;
+    background-color: grey;
+}
+
+.chatlist__chats{
+    
     overflow: scroll;
     background-color: white;
 }
 
-.bzapp-chatting{
-    
+.chats__preview{
+    display: flex;
+    background-color: antiquewhite;
+    border-top: 1px solid grey;
+    padding: 1rem;
+}
+
+.preview__pic {
+    max-height: 80px;
+    aspect-ratio: 1;
+}
+
+/* main stile ---------------------------------------------------------- */
+
+
+.bzapp__chatting{
     max-height: 100%;
     background-color: burlywood;
 }
+
 
