--- a/styles/style.css
+++ b/styles/style.css
@@ -47,18 +47,15 @@ i{
 
 /* aside stile ---------------------------------------------------------- */
 
-.bzapp__chatlist{
-    position: relative;
-    overflow-y:scroll;
+.bzapp__chatlist{  
+    overflow:auto;
+    flex-wrap: nowrap; 
     height: 100%;
     border-right: 1px solid lightgray;
     background-color: white;
 }
 
-.chatlist__header{
-    position: sticky;
-    top:0;
-    
+.chatlist__header{  
     background-color: #EAEAEA;
 }
 
@@ -77,12 +74,10 @@ i{
 }
 
 .chatlist__chats{
-    
     background-color: white;
 }
 
 .chats__preview{
-    
     display: flex;
     background-color: white;
     border-top: 1px solid #EAEAEA;
@@ -127,7 +122,7 @@ i{
 
 
 .bzapp__chatting{
-    overflow-y: scroll;
+    
     max-height: 100%;
     background-color: burlywood;
 }
@@ -138,7 +133,7 @@ i{
 }
 
 .chatting__content{
-
+    overflow-y: auto;
     padding: 4rem 10%;
     height: 300px;
     background-image: url(../img/bg-content.png);
