--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,10 @@ i{
     background-color: #EAEAEA;
 }
 
+.active{
+    background-color: #EAEAEA;
+}
+
 .preview__pic {
     border-radius: 9999px;
     align-self: center;
@@ -133,7 +137,7 @@ i{
 }
 
 .chatting__content{
-    overflow-y: auto;
+    overflow-y: scroll;
     padding: 4rem 10%;
     height: 300px;
     background-image: url(../img/bg-content.png);
